hot-fix(overflowing-bottom-nav): Fixed the bug where the left section was overflowing to the bottom nav

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
   -webkit-backdrop-filter: blur(60px);
   width: 1400px;
   min-width: 700px;
+  min-height: 640px;
   padding: 40px 50px 10px 50px;
   margin: 0 auto;
   border-radius: 20px;
@@ -66,7 +67,6 @@ main {
 .left {
   position: relative;
   width: 700px;
-
   margin-right: 200px;
 }
 
@@ -102,14 +102,15 @@ main {
   background-color: rgb(148, 108, 218);
 }
 
-.left nav {
+.bottom nav {
   position: absolute;
+  left: 50px;
   bottom: 5px;
   display: flex;
   gap: 20px;
 }
 
-.left nav button {
+.bottom nav button {
   background-color: transparent;
   color: #a8a8a8;
   border: none;
@@ -118,11 +119,11 @@ main {
   transition: all 0.25 ease-in-out;
 }
 
-.left nav button:hover {
+.bottom nav button:hover {
   color: rgb(148, 108, 218);
 }
 
-.left nav button i {
+.bottom nav button i {
   font-size: 30px;
 }
 
